# pgdb-copypaste-rs

./: Cargo.toml  LICENSE  README.md
src/: main.rs
