[package]
name = "pgdb-copypaste-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "=0.19.4"
tokio = { version = "1.28.1", features = ["full"] }
dotenv = "0.15.0"
bytes = "1.4.0"
tokio-postgres = "=0.7.7"